# Cart3DDemo

./: .gitignore  Arcball.hpp  CMakeLists.txt  README.md  XTranslation.stl  YTranslation.stl  ZTranslation.stl  a1.stl  arrow.hpp  arrow_curved.hpp  circle.hpp  common.h  foxCommonMethod.h  foxTransformAssistant.h  foxcamera.cpp  foxcamera.h  foxlighting.cpp  foxlighting.h  foxmeshmodel.cpp  foxmeshmodel.h  foxopenGLwidget.cpp  foxopenGLwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
caseData/CrossSectionTestData/: output.txt
caseData/invisalignData/DownArch/: m_CutGumPd0_0.stl  m_CutGumPd0_1.stl  m_CutGumPd0_10.stl  m_CutGumPd0_11.stl  m_CutGumPd0_12.stl  m_CutGumPd0_13.stl  m_CutGumPd0_14.stl  m_CutGumPd0_2.stl  m_CutGumPd0_3.stl  m_CutGumPd0_4.stl  m_CutGumPd0_5.stl  m_CutGumPd0_6.stl  m_CutGumPd0_7.stl  m_CutGumPd0_8.stl  m_CutGumPd0_9.stl
geometry/: foxpipesource.cpp  foxpipesource.h  foxplane.h  foxspheresource.cpp  foxspheresource.h
lib/Cart3D/include/Cart3DCore/collider/: Cart3dColliderDefine.h
lib/Cart3D/include/Cart3DCore/collider/Collider/: PQPCollider.h
lib/Cart3D/include/Cart3DCore/collider/PQP/: BV.h  Build.h  MatVec.h  PQP_Compile.h  RectDist.h
lib/Cart3D/include/Cart3DCore/common/: Cart3DCommonDefine.h
lib/Cart3D/include/Cart3DCore/common/MeshIO/: tiny_obj_loader.h  tinyplot3d.h  tinyply.h
lib/Cart3D/include/Cart3DCore/common/Pool/: MemoryPool.h
lib/Cart3D/include/Cart3DCore/common/PriorityQueue/: PriorityQueue.h  updatable_priority_queue.h
lib/Cart3D/include/Cart3DCore/common/Profile/: Colors.h  DebugUtil.hpp  ShowData.h
lib/Cart3D/include/Cart3DCore/common/Sys/: CPUTimer.h  FileSystem.h  Logger.h  StrSystem.h
lib/Cart3D/include/Cart3DCore/common/Util/: BoostUtil.h  EigenUtil.h  ErrorCodeUtil.h  OpenMeshUtil.h  TreeUtil.h
lib/Cart3D/include/Cart3DCore/cork/: Cart3DCorkDefine.h  cork.h
lib/Cart3D/include/Cart3DCore/generation/: Cart3DGenerationDefine.h
lib/Cart3D/include/Cart3DCore/gpu/: Cart3DGPUDefine.h
lib/Cart3D/include/Cart3DCore/image/: Cart3dImageDefine.h
lib/Cart3D/include/Cart3DCore/math/: Cart3dMathDefine.h
lib/Cart3D/include/Cart3DCore/mesh/: Cart3DMeshDefine.h
lib/Cart3D/include/Cart3DCore/offset/: Cart3DOffsetDefine.h  offset.h
lib/Cart3D/include/Cart3DCore/parallelcork/: Cart3DParallelCorkDefine.h  corkdef.h  test_parallelcork.h
lib/Cart3D/include/Cart3DCore/repair/: Cart3DRepairDefine.h
lib/Cart3D/include/Cart3DCore/slam/: Cart3DSlamDefine.h
lib/Cart3D/include/Cart3DCore/slicer/: Cart3DSlicerDefine.h
lib/Cart3D/include/Cart3DCore/splinecore/: Cart3DSplineCore.h
lib/Cart3D/include/Cart3DCore/tools/: Cart3DToolsDefine.h
lib/Cart3D/include/dental/: AutoGen0BucketShell.h  AutoGen1BucketShell.h  AutoGen2BucketShell.h  AutoGenBucketShell.h  AutoGenImplantShell.h  BassProsolve.h  DifferentialGeometry.h  FastClyinder.h  GumsCurve.h  GumsGeneration.h  GumsInfo.h  JawBaseMesh.h  MarkJaw.h  MatVec.h  MeshAttribute.h  Normals.h  Subdivision.h  SurfaceMesh.h  Types.h
lib/Cart3D/lib/: ManifoldMesh.lib  collider.lib  common.lib  cork.lib  generation.lib  glfw3.lib  gpu.lib  image.lib  math.lib  mesh.lib  mmg.lib  mpir.lib  offset.lib  parallelcork.lib  repair.lib  slam.lib  slicer.lib  spdlog.lib  splinecore.lib  tbbmalloc.lib  tbbmalloc_proxy.lib  tools.lib
lib/Cart3D/lib/cmake/TBB/: TBBConfigVersion.cmake  TBBTargets.cmake
lib/Cart3D/lib/cmake/mimalloc-2.1/: mimalloc-config.cmake  mimalloc-release.cmake  mimalloc.cmake
lib/Cart3D/lib/mimalloc-2.1/: mimalloc-static-debug.lib
lib/Cart3D/lib/pkgconfig/: glfw3.pc  mimalloc.pc  tbb.pc
lib/OpenMesh/libdata/pkgconfig/: openmesh.pc
lib/OpenMesh/share/OpenMesh/cmake/: OpenMeshConfig-release.cmake  OpenMeshConfig.cmake
model/: foxmesh.cpp  foxmesh.h  foxmeshmodel.cpp  foxmeshmodel.h
model/geometry/: foxline.h  foxpipesource.cpp  foxspheresource.cpp  foxspheresource.h
rendering/: foxactor.cpp  foxactor.h  foxcamera.cpp  foxcamera.h  foxlighting.cpp  foxlighting.h  foxlinerenderer.cpp  foxlinerenderer.h  foxopenglpolydatamapper.cpp  foxopenglpolydatamapper.h  foxpolydata.cpp  foxpolydata.h  foxrenderer.cpp  foxrenderer.h  foxshaderprogram.cpp  foxshaderprogram.h
view/: fox2dcrosssectionwidget.cpp  fox2dcrosssectionwidget.h  foxopenGLwidget.cpp  foxopenGLwidget.h
(+326 files in other folders)
